--- a/package.json
+++ b/package.json
@@ -4,5 +4,13 @@
   "main": "index.js",
   "repository": "git@github.com:keikeito/udemy_react.git",
   "author": "NAKAYAMA KEITO <keikeito0122@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.7.0",
+    "webpack-dev-server": "^2.9.1"
+  }
 }
