--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "repository": "git@github.com:keikeito/udemy_react.git",
   "author": "NAKAYAMA KEITO <keikeito0122@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "./node_modules/.bin/webpack-dev-server"
+  },
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.12.0",
     "webpack": "^3.7.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1"
   }
 }
