--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.7.2",
+    "react": "15",
+    "react-dom": "15",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.7.0",
