--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "./node_modules/.bin/webpack-dev-server"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -18,8 +19,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.7.2",
+    "prop-types": "^15.6.1",
     "react": "15",
     "react-dom": "15",
+    "react-google-maps": "^9.4.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.7.0",
