--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "css-loader": "^0.28.7",
     "eslint": "^4.12.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "geolib": "^2.0.24",
     "import-glob-loader": "^1.1.0",
+    "lodash": "^4.17.10",
     "node-sass": "^4.7.2",
     "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
     "react": "15",
     "react-dom": "15",
     "react-google-maps": "^9.4.5",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.7.0",
